<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestNew</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start Game</string>
    <string name="level_easy">Level 1: 9 squares</string>
    <string name="level_medium">Level 1: 16 squares</string>
    <string name="level_high">Level 1: 36 squares</string>
    <string name="level_pro">Level 1: 64 squares</string>
    <string name="method__init_game_activity">initGameActivity</string>
    <string name="title_activity_main_game">MainGame</string>


    <string name="time_bar">Time Left</string>
    <string name="start_button_game">Start Game</string>
    <string name="pause_button_game">Pause Game</string>
    <string name="method_start_game">startGame</string>
    <string name="start_settings">Edit Preferences</string>


    <!-- MESSAGES FOR UI -->
    <string name="die_message">You have died!!</string>
    <string name="invalid_move">You cant move there!!</string>
    <string name="click_danger">You step over a danger!!</string>
    <string name="player_is_dead">You are Dead, restart the game!!</string>
    <string name="got_coin">Got a new coin!!</string>
    <string name="new_level">Hooray, new level!!</string>


</resources>
